--- a/app/src/main/res/drawable/tab_dot_unselected_state.xml
+++ b/app/src/main/res/drawable/tab_dot_unselected_state.xml
@@ -1,15 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <!--
   ~ Created by Andrii Kovalchuk
-  ~ Copyright (c) 2019. All rights reserved.
-  ~ Last modified 04.12.19 19:13
+  ~ Copyright (c) 2020. All rights reserved.
+  ~ Last modified 11.03.20 19:49
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
   ~ file, You can obtain one at https://mozilla.org/MPL/2.0/.
   -->
 
-<shape xmlns:android="http://schemas.android.com/apk/res/android"
+<shape
+	xmlns:android="http://schemas.android.com/apk/res/android"
 	android:innerRadius="0dp"
 	android:shape="ring"
 	android:thickness="3dp"
