--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,7 +1,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 05.03.20 17:12
+  ~ Last modified 12.03.20 15:54
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -28,12 +28,11 @@
 		<item name="colorSurface">@color/colorSurface</item>
 		<item name="colorOnSurface">@color/colorOnSurface</item>
 
-		<item name="colorAccent">@color/colorAccent</item>
-
 		<item name="android:colorBackground">@color/black</item>
 		<item name="colorOnBackground">@color/white</item>
 
-		<item name="actionOverflowMenuStyle">@style/overFlowMenuStyle</item>
+		<!-- display menu popup under toolbar -->
+		<item name="actionOverflowMenuStyle">@style/MyOverFlowMenuStyle</item>
 
 <!--		<item name="android:windowDrawsSystemBarBackgrounds">true</item>-->
 <!--		<item name="android:windowTranslucentStatus">true</item>-->
@@ -51,17 +50,17 @@
 
 	</style>
 
+	<!-- provided by theme settings vert dots style -->
 	<style name="AppTheme.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
-	<style name="AppTheme.PopupOverlay" parent="ThemeOverlay.AppCompat.Dark" />
 
-	<style name="menuPopupStyle" parent="Widget.AppCompat.PopupMenu">
-		<item name="android:itemBackground">@color/colorAccentDark</item>
-		<item name="android:itemTextAppearance">@style/MenuItemTextStyle</item>
-		<item name="android:overlapAnchor">false</item>
+	<!-- custom appearance pop up menu items -->
+	<style name="MyMenuPopupStyle" parent="Widget.AppCompat.PopupMenu">
+		<item name="android:itemBackground">@color/colorPrimary</item>
+		<item name="android:itemTextAppearance">@style/regular_text_white85op</item>
 	</style>
 
 	<!-- display menu popup under toolbar -->
-	<style name="overFlowMenuStyle" parent="Widget.AppCompat.PopupMenu.Overflow">
+	<style name="MyOverFlowMenuStyle" parent="Widget.AppCompat.PopupMenu.Overflow">
 		<item name="android:overlapAnchor">false</item>
 		<item name="android:dropDownVerticalOffset">5dp</item>
 	</style>
@@ -136,7 +135,6 @@
 		<item name="cornerSize">50%</item>
 	</style>
 
-
 	<style name="MyMaterialIconButton" parent="Widget.MaterialComponents.Button.TextButton">
 		<item name="android:minWidth">0dp</item>
 		<item name="android:insetLeft">0dp</item>
@@ -183,12 +181,6 @@
 		<item name="android:textSize">32sp</item>
 	</style>
 
-	<style name="MenuItemTextStyle" parent="Widget.AppCompat.TextView">
-		<item name="android:fontFamily">@font/rubik_regular</item>
-		<item name="android:textColor">@color/white_85</item>
-		<item name="android:textSize">16sp</item>
-	</style>
-
 	<!-- toolbar title -->
 	<style name="ToolbarTitle" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_regular</item>
@@ -196,17 +188,8 @@
 		<item name="android:textSize">20sp</item>
 	</style>
 
-	<style name="NavigationItemText" parent="Widget.AppCompat.TextView">
-		<item name="android:fontFamily">@font/rubik_regular</item>
-		<item name="android:textColor">@color/white_85</item>
-		<item name="android:textSize">16sp</item>
-	</style>
-
-
 
 	<!-- general text styles -->
-
-
 	<style name="bold_text_white85op" parent="Widget.AppCompat.TextView">
 		<item name="android:fontFamily">@font/rubik_bold</item>
 		<item name="android:textColor">@color/white_85</item>
