moved fab profile visibility logic to databinding

--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -2,7 +2,7 @@
 <!--
   ~ Created by Andrii Kovalchuk
   ~ Copyright (c) 2020. All rights reserved.
-  ~ Last modified 12.03.20 15:51
+  ~ Last modified 12.03.20 19:24
   ~
   ~ This Source Code Form is subject to the terms of the Mozilla Public
   ~ License, v. 2.0. If a copy of the MPL was not distributed with this
@@ -15,6 +15,12 @@
 	xmlns:tools="http://schemas.android.com/tools">
 
 	<data>
+
+		<import type="android.view.View"/>
+
+		<variable
+			name="isFabVisible"
+			type="Boolean" />
 
 		<variable
 			name="viewModel"
@@ -184,6 +190,7 @@
 			android:layout_width="wrap_content"
 			android:layout_margin="@dimen/general_margin_16"
 			android:src="@drawable/ic_profile_send_message_24dp"
+			android:visibility='@{isFabVisible ? View.VISIBLE : View.GONE, default = "gone"}'
 			app:backgroundTint="@color/amethyst"
 			app:rippleColor="@color/black_50"
 			app:layout_anchor="@id/appBarProfile"
